src/yyparse.output
Terminals unused in grammar

   BLOCK
   CALL
   IFELSE
   INITDECL
   POS
   NEG
   NEWARRAY
   NEWSTRING
   TYPEID
   FIELD
   ROOT
   INDEX
   RETURNVOID
   VARDECL
   DECLID
   FUNCTION
   PARAM
   PROTOTYPE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program struct
    3        | program statement
    4        | program function
    5        | program error '}'
    6        | program error ';'
    7        | /* empty */

    8 struct: STRUCT IDENT '{' '}'
    9       | fieldlist '}'

   10 fieldlist: STRUCT IDENT '{' fielddecl ';'
   11          | fieldlist fielddecl ';'

   12 fielddecl: basetype IDENT
   13          | basetype ARRAY IDENT

   14 basetype: VOID
   15         | BOOL
   16         | CHAR
   17         | INT
   18         | STRING
   19         | IDENT

   20 function: identdecl params ')' funblock
   21         | identdecl params ')' ';'
   22         | identdecl '(' ')' funblock
   23         | identdecl '(' ')' ';'

   24 params: '(' identdecl
   25       | params ',' identdecl

   26 funblock: '{' '}'
   27         | blocklist '}'

   28 statement: block
   29          | vardecl
   30          | while
   31          | ifelse
   32          | return
   33          | expr ';'

   34 block: '{' '}'
   35      | blocklist '}'
   36      | ';'

   37 blocklist: '{' statement
   38          | blocklist statement

   39 identdecl: basetype IDENT
   40          | basetype ARRAY IDENT

   41 vardecl: identdecl '=' expr ';'

   42 while: WHILE '(' expr ')' statement

   43 ifelse: IF '(' expr ')' statement
   44       | IF '(' expr ')' statement ELSE statement

   45 return: RETURN expr ';'
   46       | RETURN ';'

   47 expr: expr '=' expr
   48     | expr EQ expr
   49     | expr NE expr
   50     | expr LT expr
   51     | expr LE expr
   52     | expr GT expr
   53     | expr GE expr
   54     | expr '+' expr
   55     | expr '-' expr
   56     | expr '*' expr
   57     | expr '/' expr
   58     | expr '%' expr
   59     | '-' expr
   60     | '+' expr
   61     | '!' expr
   62     | ORD expr
   63     | CHR expr
   64     | allocator
   65     | call
   66     | '(' expr ')'
   67     | variable
   68     | constant

   69 call: IDENT '(' ')'
   70     | callist ')'

   71 callist: IDENT '(' expr
   72        | callist ',' expr

   73 allocator: NEW IDENT '(' ')'
   74          | NEW STRING '(' expr ')'
   75          | NEW basetype '[' expr ']'

   76 variable: IDENT
   77         | expr '[' expr ']'
   78         | expr '.' IDENT

   79 constant: INTCON
   80         | CHARCON
   81         | STRINGCON
   82         | FALSE
   83         | TRUE
   84         | NIL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 61
'%' (37) 58
'(' (40) 22 23 24 42 43 44 66 69 71 73 74
')' (41) 20 21 22 23 42 43 44 66 69 70 73 74
'*' (42) 56
'+' (43) 54 60
',' (44) 25 72
'-' (45) 55 59
'.' (46) 78
'/' (47) 57
';' (59) 6 10 11 21 23 33 36 41 45 46
'=' (61) 41 47
'[' (91) 75 77
']' (93) 75 77
'{' (123) 8 10 26 34 37
'}' (125) 5 8 9 26 27 34 35
error (256) 5 6
VOID (258) 14
BOOL (259) 15
CHAR (260) 16
INT (261) 17
STRING (262) 18 74
IF (263) 43 44
ELSE (264) 44
WHILE (265) 42
RETURN (266) 45 46
STRUCT (267) 8 10
FALSE (268) 82
TRUE (269) 83
NIL (270) 84
NEW (271) 73 74 75
ARRAY (272) 13 40
EQ (273) 48
NE (274) 49
LT (275) 50
LE (276) 51
GT (277) 52
GE (278) 53
IDENT (279) 8 10 12 13 19 39 40 69 71 73 76 78
INTCON (280) 79
CHARCON (281) 80
STRINGCON (282) 81
BLOCK (283)
CALL (284)
IFELSE (285)
INITDECL (286)
POS (287)
NEG (288)
NEWARRAY (289)
NEWSTRING (290)
TYPEID (291)
FIELD (292)
ORD (293) 62
CHR (294) 63
ROOT (295)
INDEX (296)
RETURNVOID (297)
VARDECL (298)
DECLID (299)
FUNCTION (300)
PARAM (301)
PROTOTYPE (302)
THEN (303)
UNEG (304)
UPOS (305)


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
start (68)
    on left: 1, on right: 0
program (69)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4 5 6
struct (70)
    on left: 8 9, on right: 2
fieldlist (71)
    on left: 10 11, on right: 9 11
fielddecl (72)
    on left: 12 13, on right: 10 11
basetype (73)
    on left: 14 15 16 17 18 19, on right: 12 13 39 40 75
function (74)
    on left: 20 21 22 23, on right: 4
params (75)
    on left: 24 25, on right: 20 21 25
funblock (76)
    on left: 26 27, on right: 20 22
statement (77)
    on left: 28 29 30 31 32 33, on right: 3 37 38 42 43 44
block (78)
    on left: 34 35 36, on right: 28
blocklist (79)
    on left: 37 38, on right: 27 35 38
identdecl (80)
    on left: 39 40, on right: 20 21 22 23 24 25 41
vardecl (81)
    on left: 41, on right: 29
while (82)
    on left: 42, on right: 30
ifelse (83)
    on left: 43 44, on right: 31
return (84)
    on left: 45 46, on right: 32
expr (85)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66 67 68, on right: 33 41 42 43 44 45 47 48 49 50 51 52 53 54
    55 56 57 58 59 60 61 62 63 66 71 72 74 75 77 78
call (86)
    on left: 69 70, on right: 65
callist (87)
    on left: 71 72, on right: 70 72
allocator (88)
    on left: 73 74 75, on right: 64
variable (89)
    on left: 76 77 78, on right: 67
constant (90)
    on left: 79 80 81 82 83 84, on right: 68


state 0

    0 $accept: . start $end

    $default  reduce using rule 7 (program)

    start    go to state 1
    program  go to state 2


state 1

    0 $accept: start . $end

    $end  shift, and go to state 3


state 2

    1 start: program .
    2 program: program . struct
    3        | program . statement
    4        | program . function
    5        | program . error '}'
    6        | program . error ';'

    error      shift, and go to state 4
    VOID       shift, and go to state 5
    BOOL       shift, and go to state 6
    CHAR       shift, and go to state 7
    INT        shift, and go to state 8
    STRING     shift, and go to state 9
    IF         shift, and go to state 10
    WHILE      shift, and go to state 11
    RETURN     shift, and go to state 12
    STRUCT     shift, and go to state 13
    FALSE      shift, and go to state 14
    TRUE       shift, and go to state 15
    NIL        shift, and go to state 16
    NEW        shift, and go to state 17
    IDENT      shift, and go to state 18
    INTCON     shift, and go to state 19
    CHARCON    shift, and go to state 20
    STRINGCON  shift, and go to state 21
    ORD        shift, and go to state 22
    CHR        shift, and go to state 23
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '!'        shift, and go to state 26
    '('        shift, and go to state 27
    ';'        shift, and go to state 28
    '{'        shift, and go to state 29

    $end  reduce using rule 1 (start)

    struct     go to state 30
    fieldlist  go to state 31
    basetype   go to state 32
    function   go to state 33
    statement  go to state 34
    block      go to state 35
    blocklist  go to state 36
    identdecl  go to state 37
    vardecl    go to state 38
    while      go to state 39
    ifelse     go to state 40
    return     go to state 41
    expr       go to state 42
    call       go to state 43
    callist    go to state 44
    allocator  go to state 45
    variable   go to state 46
    constant   go to state 47


state 3

    0 $accept: start $end .

    $default  accept


state 4

    5 program: program error . '}'
    6        | program error . ';'

    '}'  shift, and go to state 48
    ';'  shift, and go to state 49


state 5

   14 basetype: VOID .

    $default  reduce using rule 14 (basetype)


state 6

   15 basetype: BOOL .

    $default  reduce using rule 15 (basetype)


state 7

   16 basetype: CHAR .

    $default  reduce using rule 16 (basetype)


state 8

   17 basetype: INT .

    $default  reduce using rule 17 (basetype)


state 9

   18 basetype: STRING .

    $default  reduce using rule 18 (basetype)


state 10

   43 ifelse: IF . '(' expr ')' statement
   44       | IF . '(' expr ')' statement ELSE statement

    '('  shift, and go to state 50


state 11

   42 while: WHILE . '(' expr ')' statement

    '('  shift, and go to state 51


state 12

   45 return: RETURN . expr ';'
   46       | RETURN . ';'

    FALSE      shift, and go to state 14
    TRUE       shift, and go to state 15
    NIL        shift, and go to state 16
    NEW        shift, and go to state 17
    IDENT      shift, and go to state 52
    INTCON     shift, and go to state 19
    CHARCON    shift, and go to state 20
    STRINGCON  shift, and go to state 21
    ORD        shift, and go to state 22
    CHR        shift, and go to state 23
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '!'        shift, and go to state 26
    '('        shift, and go to state 27
    ';'        shift, and go to state 53

    expr       go to state 54
    call       go to state 43
    callist    go to state 44
    allocator  go to state 45
    variable   go to state 46
    constant   go to state 47


state 13

    8 struct: STRUCT . IDENT '{' '}'
   10 fieldlist: STRUCT . IDENT '{' fielddecl ';'

    IDENT  shift, and go to state 55


state 14

   82 constant: FALSE .

    $default  reduce using rule 82 (constant)


state 15

   83 constant: TRUE .

    $default  reduce using rule 83 (constant)


state 16

   84 constant: NIL .

    $default  reduce using rule 84 (constant)


state 17

   73 allocator: NEW . IDENT '(' ')'
   74          | NEW . STRING '(' expr ')'
   75          | NEW . basetype '[' expr ']'

    VOID    shift, and go to state 5
    BOOL    shift, and go to state 6
    CHAR    shift, and go to state 7
    INT     shift, and go to state 8
    STRING  shift, and go to state 56
    IDENT   shift, and go to state 57

    basetype  go to state 58


state 18

   19 basetype: IDENT .
   69 call: IDENT . '(' ')'
   71 callist: IDENT . '(' expr
   76 variable: IDENT .

    '('  shift, and go to state 59

    ARRAY     reduce using rule 19 (basetype)
    IDENT     reduce using rule 19 (basetype)
    $default  reduce using rule 76 (variable)


state 19

   79 constant: INTCON .

    $default  reduce using rule 79 (constant)


state 20

   80 constant: CHARCON .

    $default  reduce using rule 80 (constant)


state 21

   81 constant: STRINGCON .

    $default  reduce using rule 81 (constant)


state 22

   62 expr: ORD . expr

    FALSE      shift, and go to state 14
    TRUE       shift, and go to state 15
    NIL        shift, and go to state 16
    NEW        shift, and go to state 17
    IDENT      shift, and go to state 52
    INTCON     shift, and go to state 19
    CHARCON    shift, and go to state 20
    STRINGCON  shift, and go to state 21
    ORD        shift, and go to state 22
    CHR        shift, and go to state 23
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '!'        shift, and go to state 26
    '('        shift, and go to state 27

    expr       go to state 60
    call       go to state 43
    callist    go to state 44
    allocator  go to state 45
    variable   go to state 46
    constant   go to state 47


state 23

   63 expr: CHR . expr

    FALSE      shift, and go to state 14
    TRUE       shift, and go to state 15
    NIL        shift, and go to state 16
    NEW        shift, and go to state 17
    IDENT      shift, and go to state 52
    INTCON     shift, and go to state 19
    CHARCON    shift, and go to state 20
    STRINGCON  shift, and go to state 21
    ORD        shift, and go to state 22
    CHR        shift, and go to state 23
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '!'        shift, and go to state 26
    '('        shift, and go to state 27

    expr       go to state 61
    call       go to state 43
    callist    go to state 44
    allocator  go to state 45
    variable   go to state 46
    constant   go to state 47


state 24

   60 expr: '+' . expr

    FALSE      shift, and go to state 14
    TRUE       shift, and go to state 15
    NIL        shift, and go to state 16
    NEW        shift, and go to state 17
    IDENT      shift, and go to state 52
    INTCON     shift, and go to state 19
    CHARCON    shift, and go to state 20
    STRINGCON  shift, and go to state 21
    ORD        shift, and go to state 22
    CHR        shift, and go to state 23
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '!'        shift, and go to state 26
    '('        shift, and go to state 27

    expr       go to state 62
    call       go to state 43
    callist    go to state 44
    allocator  go to state 45
    variable   go to state 46
    constant   go to state 47


state 25

   59 expr: '-' . expr

    FALSE      shift, and go to state 14
    TRUE       shift, and go to state 15
    NIL        shift, and go to state 16
    NEW        shift, and go to state 17
    IDENT      shift, and go to state 52
    INTCON     shift, and go to state 19
    CHARCON    shift, and go to state 20
    STRINGCON  shift, and go to state 21
    ORD        shift, and go to state 22
    CHR        shift, and go to state 23
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '!'        shift, and go to state 26
    '('        shift, and go to state 27

    expr       go to state 63
    call       go to state 43
    callist    go to state 44
    allocator  go to state 45
    variable   go to state 46
    constant   go to state 47


state 26

   61 expr: '!' . expr

    FALSE      shift, and go to state 14
    TRUE       shift, and go to state 15
    NIL        shift, and go to state 16
    NEW        shift, and go to state 17
    IDENT      shift, and go to state 52
    INTCON     shift, and go to state 19
    CHARCON    shift, and go to state 20
    STRINGCON  shift, and go to state 21
    ORD        shift, and go to state 22
    CHR        shift, and go to state 23
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '!'        shift, and go to state 26
    '('        shift, and go to state 27

    expr       go to state 64
    call       go to state 43
    callist    go to state 44
    allocator  go to state 45
    variable   go to state 46
    constant   go to state 47


state 27

   66 expr: '(' . expr ')'

    FALSE      shift, and go to state 14
    TRUE       shift, and go to state 15
    NIL        shift, and go to state 16
    NEW        shift, and go to state 17
    IDENT      shift, and go to state 52
    INTCON     shift, and go to state 19
    CHARCON    shift, and go to state 20
    STRINGCON  shift, and go to state 21
    ORD        shift, and go to state 22
    CHR        shift, and go to state 23
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '!'        shift, and go to state 26
    '('        shift, and go to state 27

    expr       go to state 65
    call       go to state 43
    callist    go to state 44
    allocator  go to state 45
    variable   go to state 46
    constant   go to state 47


state 28

   36 block: ';' .

    $default  reduce using rule 36 (block)


state 29

   34 block: '{' . '}'
   37 blocklist: '{' . statement

    VOID       shift, and go to state 5
    BOOL       shift, and go to state 6
    CHAR       shift, and go to state 7
    INT        shift, and go to state 8
    STRING     shift, and go to state 9
    IF         shift, and go to state 10
    WHILE      shift, and go to state 11
    RETURN     shift, and go to state 12
    FALSE      shift, and go to state 14
    TRUE       shift, and go to state 15
    NIL        shift, and go to state 16
    NEW        shift, and go to state 17
    IDENT      shift, and go to state 18
    INTCON     shift, and go to state 19
    CHARCON    shift, and go to state 20
    STRINGCON  shift, and go to state 21
    ORD        shift, and go to state 22
    CHR        shift, and go to state 23
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '!'        shift, and go to state 26
    '('        shift, and go to state 27
    '}'        shift, and go to state 66
    ';'        shift, and go to state 28
    '{'        shift, and go to state 29

    basetype   go to state 32
    statement  go to state 67
    block      go to state 35
    blocklist  go to state 36
    identdecl  go to state 68
    vardecl    go to state 38
    while      go to state 39
    ifelse     go to state 40
    return     go to state 41
    expr       go to state 42
    call       go to state 43
    callist    go to state 44
    allocator  go to state 45
    variable   go to state 46
    constant   go to state 47


state 30

    2 program: program struct .

    $default  reduce using rule 2 (program)


state 31

    9 struct: fieldlist . '}'
   11 fieldlist: fieldlist . fielddecl ';'

    VOID    shift, and go to state 5
    BOOL    shift, and go to state 6
    CHAR    shift, and go to state 7
    INT     shift, and go to state 8
    STRING  shift, and go to state 9
    IDENT   shift, and go to state 69
    '}'     shift, and go to state 70

    fielddecl  go to state 71
    basetype   go to state 72


state 32

   39 identdecl: basetype . IDENT
   40          | basetype . ARRAY IDENT

    ARRAY  shift, and go to state 73
    IDENT  shift, and go to state 74


state 33

    4 program: program function .

    $default  reduce using rule 4 (program)


state 34

    3 program: program statement .

    $default  reduce using rule 3 (program)


state 35

   28 statement: block .

    $default  reduce using rule 28 (statement)


state 36

   35 block: blocklist . '}'
   38 blocklist: blocklist . statement

    VOID       shift, and go to state 5
    BOOL       shift, and go to state 6
    CHAR       shift, and go to state 7
    INT        shift, and go to state 8
    STRING     shift, and go to state 9
    IF         shift, and go to state 10
    WHILE      shift, and go to state 11
    RETURN     shift, and go to state 12
    FALSE      shift, and go to state 14
    TRUE       shift, and go to state 15
    NIL        shift, and go to state 16
    NEW        shift, and go to state 17
    IDENT      shift, and go to state 18
    INTCON     shift, and go to state 19
    CHARCON    shift, and go to state 20
    STRINGCON  shift, and go to state 21
    ORD        shift, and go to state 22
    CHR        shift, and go to state 23
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '!'        shift, and go to state 26
    '('        shift, and go to state 27
    '}'        shift, and go to state 75
    ';'        shift, and go to state 28
    '{'        shift, and go to state 29

    basetype   go to state 32
    statement  go to state 76
    block      go to state 35
    blocklist  go to state 36
    identdecl  go to state 68
    vardecl    go to state 38
    while      go to state 39
    ifelse     go to state 40
    return     go to state 41
    expr       go to state 42
    call       go to state 43
    callist    go to state 44
    allocator  go to state 45
    variable   go to state 46
    constant   go to state 47


state 37

   20 function: identdecl . params ')' funblock
   21         | identdecl . params ')' ';'
   22         | identdecl . '(' ')' funblock
   23         | identdecl . '(' ')' ';'
   41 vardecl: identdecl . '=' expr ';'

    '='  shift, and go to state 77
    '('  shift, and go to state 78

    params  go to state 79


state 38

   29 statement: vardecl .

    $default  reduce using rule 29 (statement)


state 39

   30 statement: while .

    $default  reduce using rule 30 (statement)


state 40

   31 statement: ifelse .

    $default  reduce using rule 31 (statement)


state 41

   32 statement: return .

    $default  reduce using rule 32 (statement)


state 42

   33 statement: expr . ';'
   47 expr: expr . '=' expr
   48     | expr . EQ expr
   49     | expr . NE expr
   50     | expr . LT expr
   51     | expr . LE expr
   52     | expr . GT expr
   53     | expr . GE expr
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   58     | expr . '%' expr
   77 variable: expr . '[' expr ']'
   78         | expr . '.' IDENT

    EQ   shift, and go to state 80
    NE   shift, and go to state 81
    LT   shift, and go to state 82
    LE   shift, and go to state 83
    GT   shift, and go to state 84
    GE   shift, and go to state 85
    '='  shift, and go to state 86
    '+'  shift, and go to state 87
    '-'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90
    '%'  shift, and go to state 91
    '['  shift, and go to state 92
    '.'  shift, and go to state 93
    ';'  shift, and go to state 94


state 43

   65 expr: call .

    $default  reduce using rule 65 (expr)


state 44

   70 call: callist . ')'
   72 callist: callist . ',' expr

    ')'  shift, and go to state 95
    ','  shift, and go to state 96


state 45

   64 expr: allocator .

    $default  reduce using rule 64 (expr)


state 46

   67 expr: variable .

    $default  reduce using rule 67 (expr)


state 47

   68 expr: constant .

    $default  reduce using rule 68 (expr)


state 48

    5 program: program error '}' .

    $default  reduce using rule 5 (program)


state 49

    6 program: program error ';' .

    $default  reduce using rule 6 (program)


state 50

   43 ifelse: IF '(' . expr ')' statement
   44       | IF '(' . expr ')' statement ELSE statement

    FALSE      shift, and go to state 14
    TRUE       shift, and go to state 15
    NIL        shift, and go to state 16
    NEW        shift, and go to state 17
    IDENT      shift, and go to state 52
    INTCON     shift, and go to state 19
    CHARCON    shift, and go to state 20
    STRINGCON  shift, and go to state 21
    ORD        shift, and go to state 22
    CHR        shift, and go to state 23
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '!'        shift, and go to state 26
    '('        shift, and go to state 27

    expr       go to state 97
    call       go to state 43
    callist    go to state 44
    allocator  go to state 45
    variable   go to state 46
    constant   go to state 47


state 51

   42 while: WHILE '(' . expr ')' statement

    FALSE      shift, and go to state 14
    TRUE       shift, and go to state 15
    NIL        shift, and go to state 16
    NEW        shift, and go to state 17
    IDENT      shift, and go to state 52
    INTCON     shift, and go to state 19
    CHARCON    shift, and go to state 20
    STRINGCON  shift, and go to state 21
    ORD        shift, and go to state 22
    CHR        shift, and go to state 23
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '!'        shift, and go to state 26
    '('        shift, and go to state 27

    expr       go to state 98
    call       go to state 43
    callist    go to state 44
    allocator  go to state 45
    variable   go to state 46
    constant   go to state 47


state 52

   69 call: IDENT . '(' ')'
   71 callist: IDENT . '(' expr
   76 variable: IDENT .

    '('  shift, and go to state 59

    $default  reduce using rule 76 (variable)


state 53

   46 return: RETURN ';' .

    $default  reduce using rule 46 (return)


state 54

   45 return: RETURN expr . ';'
   47 expr: expr . '=' expr
   48     | expr . EQ expr
   49     | expr . NE expr
   50     | expr . LT expr
   51     | expr . LE expr
   52     | expr . GT expr
   53     | expr . GE expr
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   58     | expr . '%' expr
   77 variable: expr . '[' expr ']'
   78         | expr . '.' IDENT

    EQ   shift, and go to state 80
    NE   shift, and go to state 81
    LT   shift, and go to state 82
    LE   shift, and go to state 83
    GT   shift, and go to state 84
    GE   shift, and go to state 85
    '='  shift, and go to state 86
    '+'  shift, and go to state 87
    '-'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90
    '%'  shift, and go to state 91
    '['  shift, and go to state 92
    '.'  shift, and go to state 93
    ';'  shift, and go to state 99


state 55

    8 struct: STRUCT IDENT . '{' '}'
   10 fieldlist: STRUCT IDENT . '{' fielddecl ';'

    '{'  shift, and go to state 100


state 56

   18 basetype: STRING .
   74 allocator: NEW STRING . '(' expr ')'

    '('  shift, and go to state 101

    $default  reduce using rule 18 (basetype)


state 57

   19 basetype: IDENT .
   73 allocator: NEW IDENT . '(' ')'

    '('  shift, and go to state 102

    $default  reduce using rule 19 (basetype)


state 58

   75 allocator: NEW basetype . '[' expr ']'

    '['  shift, and go to state 103


state 59

   69 call: IDENT '(' . ')'
   71 callist: IDENT '(' . expr

    FALSE      shift, and go to state 14
    TRUE       shift, and go to state 15
    NIL        shift, and go to state 16
    NEW        shift, and go to state 17
    IDENT      shift, and go to state 52
    INTCON     shift, and go to state 19
    CHARCON    shift, and go to state 20
    STRINGCON  shift, and go to state 21
    ORD        shift, and go to state 22
    CHR        shift, and go to state 23
    '+'        shift, and go to state 24
    '-'        shift, and go to state 25
    '!'        shift, and go to state 26
    '('        shift, and go to state 27
    ')'        shift, and go to state 104

    expr       go to state 105
    call       go to state 43
    callist    go to state 44
    allocator  go to state 45
    variable   go to state 46
    constant   go to state 47


state 60

   47 expr: expr . '=' expr
   48     | expr . EQ expr
   49     | expr . NE expr
   50     | expr . LT expr
   51     | expr . LE expr
   52     | expr . GT expr
   53     | expr . GE expr
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   58     | expr . '%' expr
   62     | ORD expr .
   77 variable: expr . '[' expr ']'
   78         | expr . '.' IDENT

    '['  shift, and go to state 92
    '.'  shift, and go to state 93
